[gd_scene load_steps=2 format=3 uid="uid://battle_scene"]

[ext_resource type="Script" path="res://scripts/BattleScene.gd" id="1"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.25, 1)

[node name="BattleArea" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -80.0
offset_right = 140.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="PartyContainer" type="HBoxContainer" parent="BattleArea"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VSeparator" type="VSeparator" parent="BattleArea"]
layout_mode = 2

[node name="EnemyContainer" type="HBoxContainer" parent="BattleArea"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
text = "Battle Start!"
horizontal_alignment = 1

[node name="ActionPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AttackButton" type="Button" parent="ActionPanel"]
layout_mode = 2
text = "Attack"

[node name="DefendButton" type="Button" parent="ActionPanel"]
layout_mode = 2
text = "Defend"

[node name="ItemsButton" type="Button" parent="ActionPanel"]
layout_mode = 2
text = "Items"

[node name="RunButton" type="Button" parent="ActionPanel"]
layout_mode = 2
text = "Run"

[connection signal="pressed" from="ActionPanel/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="ActionPanel/DefendButton" to="." method="_on_defend_button_pressed"]
[connection signal="pressed" from="ActionPanel/ItemsButton" to="." method="_on_items_button_pressed"]
[connection signal="pressed" from="ActionPanel/RunButton" to="." method="_on_run_button_pressed"]
